crates/pink/runner/tests/snapshots/test_pink_contract__ink_flip.snap
---
source: crates/pink/runner/tests/test_pink_contract.rs
assertion_line: 51
expression: result
---
ContractResult {
    gas_consumed: Weight {
        ref_time: 1079341795,
        proof_size: 28136,
    },
    gas_required: Weight {
        ref_time: 79431729152,
        proof_size: 2097152,
    },
    storage_deposit: StorageDeposit::Charge(
        2,
    ),
    debug_message: [],
    result: Ok(
        InstantiateReturnValue {
            result: ExecReturnValue {
                flags: (empty),
                data: [],
            },
            account_id: 35db55bc9f81c9b14ae536cc43c37786f3ff62fe5247a4dccfd7ba3c8bf316af (5DHKYvFE...),
        },
    ),
    events: None,
}
